fix: overflow style issue with mobile view

--- a/src/domain/event/similarEvents/similarEvents.module.scss
+++ b/src/domain/event/similarEvents/similarEvents.module.scss
@@ -3,6 +3,7 @@
   padding: var(--spacing-xl) 0;
   padding-bottom: var(--padding-bottom);
   background: var(--color-black-5);
+  overflow: hidden;
 }
 
 .korosTopCollections {
